[gd_scene load_steps=15 format=3 uid="uid://d02gf6ypeno4d"]

[ext_resource type="Texture2D" uid="uid://nvcquxytx0lf" path="res://Assets/Spirits/Martial Hero/Sprites/Death.png" id="1_6uoed"]
[ext_resource type="Script" path="res://Scenes/Death.gd" id="1_76vfg"]
[ext_resource type="Texture2D" uid="uid://chilg8fu70xoj" path="res://Assets/Spirits/Monsters_Creatures_Fantasy/Skeleton/Attack.png" id="2_agh2s"]
[ext_resource type="AudioStream" uid="uid://d2w4cqfprdcaq" path="res://Assets/Audio/Samurai slash.mp3" id="2_ng2w8"]
[ext_resource type="Texture2D" uid="uid://cgms78u2ofxf6" path="res://Assets/Spirits/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="3_dhey5"]
[ext_resource type="AudioStream" uid="uid://r4axcsmeaevg" path="res://Assets/Audio/Breeze of blood.mp3" id="3_fux0c"]
[ext_resource type="Texture2D" uid="uid://tgexcnpd3aiy" path="res://Assets/Spirits/Particals and Effects/Blood.png" id="4_aya2i"]

[sub_resource type="FontFile" id="FontFile_g3g17"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_woqxx"]
default_font_size = 0
Label/colors/font_color = Color(1, 0, 0, 0.627451)
Label/colors/font_shadow_color = Color(0, 0, 0, 0.976471)
Label/font_sizes/font_size = 100
Label/fonts/font = SubResource("FontFile_g3g17")

[sub_resource type="Theme" id="Theme_8a4we"]
Button/font_sizes/font_size = 30

[sub_resource type="Theme" id="Theme_014pi"]
Button/font_sizes/font_size = 30

[sub_resource type="Animation" id="Animation_ihfsa"]
resource_name = "Death"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_6uoed")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer2/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer2/Sprite2D2:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_agh2s"), ExtResource("3_dhey5")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer2/Sprite2D2:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer2/Sprite2D2:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0, 0, 1, 2, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer2/Sprite2D3:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_aya2i")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer2/Sprite2D3:hframes")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer2/Sprite2D3:vframes")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer2/Sprite2D3:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer2/Sprite2D3:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1, 2.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CanvasLayer2/AudioStreamPlayer:stream")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_ng2w8"), ExtResource("3_fux0c")]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CanvasLayer2/AudioStreamPlayer:playing")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.4, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_grgvx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer2/Sprite2D3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vba6l"]
_data = {
"Death": SubResource("Animation_ihfsa"),
"RESET": SubResource("Animation_grgvx")
}

[node name="Death" type="Node2D" node_paths=PackedStringArray("vbox")]
process_mode = 2
script = ExtResource("1_76vfg")
vbox = NodePath("CanvasLayer/Control/Panel/VBoxContainer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_woqxx")
text = "You Died"

[node name="RestartDied" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_8a4we")
text = "Restart"

[node name="QuitDied" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_014pi")
text = "Quit"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_vba6l")
}
autoplay = "Death"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer2"]
position = Vector2(521.875, 384.25)
scale = Vector2(3, 3)
texture = ExtResource("1_6uoed")
hframes = 6

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer2"]
position = Vector2(655, 383)
scale = Vector2(3, 3)
texture = ExtResource("2_agh2s")
flip_h = true
hframes = 8

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer2"]
visible = false
position = Vector2(504.75, 359)
texture = ExtResource("4_aya2i")
hframes = 4
vframes = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer2"]
stream = ExtResource("3_fux0c")

[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/RestartDied" to="." method="_on_restart_died_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/QuitDied" to="." method="_on_quit_died_pressed"]
[connection signal="animation_finished" from="CanvasLayer2/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
